--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-twitter-embed": "^3.0.3",
     "styled": "^1.0.0",
     "styled-components": "^5.1.0"
   },
